--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>输入框：评论区 </title>
-    </head>
-    <body>
-        <img class="logo" src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=3688363437,59997974&fm=26&gp=0.jpg">
-        <br>
-        <br>
-        
-        <img src="http://img5.imgtn.bdimg.com/it/u=1167392994,2962067897&fm=26&gp=0.jpg">
-        <p> 请留言: 
-        <input class="userComment" placeholder=" 留言区... ">
-        </p>
-        <button>提交</button>
-        <div class="messages">
+  <head>
+    <title>漫画书</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+        <div class="cartoon-area">
+            <img class="cartoon" src="Shrinking_In_Brazil.jpg">
+            <img class="bubble" src="IfNLX0S.png">
+            <div class="speech-bubble">
+            </div>
         </div>
-
-    </body>
+        <div class="input">
+            <input class="speech">
+            <button class="talk">对话!</button>
+        </div>
+    <script src="jquery-1.9.1.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
